Media queries tickets, events, exhibitions.

--- a/tickets.html
+++ b/tickets.html
@@ -88,162 +88,164 @@
             </section>
             <Section>
                 <h2>Book special events</h2>
-                <section class="card">
-                    <div class="card-container">
-                        <img src="./assets/roberto-nickson-396152.jpg" alt="Image of a mammut in a museum">
-                    </div>
-                    <h3>Night in the museum</h3>
-                    <h4>Desember 20 2024</h4>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Category</th>
-                                <th>Price</th>
-                                <th>Quantity</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Kids</td>
-                                <td>Free</td>
-                                <td>
-                                    <div class="qty-container">
-                                    <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                    <input type="number" class="qty-count" min="0" value="0" step="1">
-                                    <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Students</td>
-                                <td>$5</td>
-                                <td>
-                                    <div class="qty-container">
-                                    <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                    <input type="number" class="qty-count" min="0" value="0" step="1">
-                                    <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Adults</td>
-                                <td>$10</td>
-                                <td>
-                                    <div class="qty-container">
-                                    <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                    <input type="number" class="qty-count" min="0" value="0" step="1">
-                                    <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <a href="cart.html" class="cta-button">Buy tickets</a>
-                </section>
-                <section class="card">
-                    <div class="card-container">
-                        <img src="./assets/celso-405219.jpg" alt="Image of the moon">
-                    </div>
-                    <h3>Professor of aeronautics</h3>
-                    <h4>Desember 13 2024</h4>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Category</th>
-                                <th>Price</th>
-                                <th>Quantity</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Kids</td>
-                                <td>Free</td>
-                                <td>
-                                    <div class="qty-container">
-                                    <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                    <input type="number" class="qty-count" min="0" value="0" step="1">
-                                    <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Students</td>
-                                <td>$5</td>
-                                <td>
-                                    <div class="qty-container">
-                                    <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                    <input type="number" class="qty-count" min="0" value="0" step="1">
-                                    <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Adults</td>
-                                <td>$10</td>
-                                <td>
-                                    <div class="qty-container">
-                                    <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                    <input type="number" class="qty-count" min="0" value="0" step="1">
-                                    <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <a href="cart.html" class="cta-button">Buy tickets</a>
-                </section>
-                <section class="card">
-                    <div class="card-container">
-                        <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
-                    </div>
-                    <h3>Energetica Exhibition on Loan</h3>
-                    <h4>Desember 15 2024</h4>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Category</th>
-                                <th>Price</th>
-                                <th>Quantity</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Kids</td>
-                                <td>Free</td>
-                                <td>
-                                    <div class="qty-container">
-                                    <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                    <input type="number" class="qty-count" min="0" value="0" step="1">
-                                    <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Students</td>
-                                <td>$5</td>
-                                <td>
-                                    <div class="qty-container">
-                                    <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                    <input type="number" class="qty-count" min="0" value="0" step="1">
-                                    <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Adults</td>
-                                <td>$10</td>
-                                <td>
-                                    <div class="qty-container">
-                                    <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                    <input type="number" class="qty-count" min="0" value="0" step="1">
-                                    <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <a href="cart.html" class="cta-button">Buy tickets</a>
-                </section>
+                <div class="flex">
+                    <section class="card">
+                        <div class="card-container">
+                            <img src="./assets/roberto-nickson-396152.jpg" alt="Image of a mammut in a museum">
+                        </div>
+                        <h3>Night in the museum</h3>
+                        <h4>Desember 20 2024</h4>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Category</th>
+                                    <th>Price</th>
+                                    <th>Quantity</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Kids</td>
+                                    <td>Free</td>
+                                    <td>
+                                        <div class="qty-container">
+                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                        <input type="number" class="qty-count" min="0" value="0" step="1">
+                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Students</td>
+                                    <td>$5</td>
+                                    <td>
+                                        <div class="qty-container">
+                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                        <input type="number" class="qty-count" min="0" value="0" step="1">
+                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Adults</td>
+                                    <td>$10</td>
+                                    <td>
+                                        <div class="qty-container">
+                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                        <input type="number" class="qty-count" min="0" value="0" step="1">
+                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <a href="cart.html" class="cta-button">Buy tickets</a>
+                    </section>
+                    <section class="card">
+                        <div class="card-container">
+                            <img src="./assets/celso-405219.jpg" alt="Image of the moon">
+                        </div>
+                        <h3>Professor of aeronautics</h3>
+                        <h4>Desember 13 2024</h4>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Category</th>
+                                    <th>Price</th>
+                                    <th>Quantity</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Kids</td>
+                                    <td>Free</td>
+                                    <td>
+                                        <div class="qty-container">
+                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                        <input type="number" class="qty-count" min="0" value="0" step="1">
+                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Students</td>
+                                    <td>$5</td>
+                                    <td>
+                                        <div class="qty-container">
+                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                        <input type="number" class="qty-count" min="0" value="0" step="1">
+                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Adults</td>
+                                    <td>$10</td>
+                                    <td>
+                                        <div class="qty-container">
+                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                        <input type="number" class="qty-count" min="0" value="0" step="1">
+                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <a href="cart.html" class="cta-button">Buy tickets</a>
+                    </section>
+                    <section class="card">
+                        <div class="card-container">
+                            <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
+                        </div>
+                        <h3>Energetica Exhibition on Loan</h3>
+                        <h4>Desember 15 2024</h4>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Category</th>
+                                    <th>Price</th>
+                                    <th>Quantity</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Kids</td>
+                                    <td>Free</td>
+                                    <td>
+                                        <div class="qty-container">
+                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                        <input type="number" class="qty-count" min="0" value="0" step="1">
+                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Students</td>
+                                    <td>$5</td>
+                                    <td>
+                                        <div class="qty-container">
+                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                        <input type="number" class="qty-count" min="0" value="0" step="1">
+                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Adults</td>
+                                    <td>$10</td>
+                                    <td>
+                                        <div class="qty-container">
+                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                        <input type="number" class="qty-count" min="0" value="0" step="1">
+                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <a href="cart.html" class="cta-button">Buy tickets</a>
+                    </section>
+                </div>
             </Section>
         </main>
        
