--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </section>
             </section>
 
-            <h2>Exhibition</h2>
+            <h2>Exhibitions</h2>
             <div class="scroll-container">
                 <section class="card">
                     <div class="card-container">
