test without slogan

--- a/events.html
+++ b/events.html
@@ -50,7 +50,7 @@
             </section>
 
             <section>
-                <h2>Whats happening this week - 50</h2>
+                <h2>What's happening this week - 50</h2>
                 <div class="events__flex">
                     <section class="card large">
                         <h3>Friday</h3>
