--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </section>
             <a href="visit.html" class="cta-button__header">Visit us</a>
 
-            <section class="slogan">
+            <!--<section class="slogan">
                 <h2>Discover Hands-On Fun and Science Wonders Together!</h2>
                 <h3>Bring your kids to the community science museum, where curiosity comes alive, hands-on fun awaits, and the wonders of science are yours to explore together! </h3>
                 <div class="card welcome">
@@ -67,7 +67,7 @@
                     <h2>Inspiration and curiosity</h2>
                     <p>Thought-provoking displays and exciting demonstrations spark curiosity, encouraging visitors to ask questions and explore science beyond the museum walls.</p>
                 </div>
-            </section>
+            </section>-->
 
             <h2>Special events</h2>
             <div class="scroll-container">
