--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </section>
 
-            <section class="horizontal">
+            <!--<section class="horizontal">
                 <div>
                     <h2>Hands on learning</h2>
                     <p>Interactive exhibits allow visitors to engage directly with science concepts, making learning fun and memorable.</p>
@@ -67,7 +67,7 @@
                     <h2>Inspiration and curiosity</h2>
                     <p>Thought-provoking displays and exciting demonstrations spark curiosity, encouraging visitors to ask questions and explore science beyond the museum walls.</p>
                 </div>
-            </section>
+            </section>-->
 
             <h2>Special events</h2>
             <div class="scroll-container">
