--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
             <a href="visit.html" class="cta-button__header">Visit us</a>
 
             <section class="slogan">
-                <h2>Discover Hands-On Fun and Science Wonders Together!</h2>
-                <h3>Bring your kids to the community science museum, where curiosity comes alive, hands-on fun awaits, and the wonders of science are yours to explore together! </h3>
+                <h2>Discover Hands-On Fun and Science Together!</h2>
+                <!--<h3>Bring your kids to the community science museum, where curiosity comes alive, hands-on fun awaits, and the wonders of science are yours to explore together! </h3>
                 <div class="card welcome">
                     <img src="./assets/DALL-E-2024-12-05-11.25.12.webp" alt="A happy family of four (mom, dad, son, and daughter) exploring a science museum together, smiling and engaged with interactive exhibits.">
-                </div>
+                </div>-->
             </section>
 
-            <!--<section class="horizontal">
+            <section class="horizontal">
                 <div>
                     <h2>Hands on learning</h2>
                     <p>Interactive exhibits allow visitors to engage directly with science concepts, making learning fun and memorable.</p>
@@ -67,7 +67,7 @@
                     <h2>Inspiration and curiosity</h2>
                     <p>Thought-provoking displays and exciting demonstrations spark curiosity, encouraging visitors to ask questions and explore science beyond the museum walls.</p>
                 </div>
-            </section>-->
+            </section>
 
             <h2>Special events</h2>
             <div class="scroll-container">
