Updated images with images from resourses.

--- a/explore.html
+++ b/explore.html
@@ -42,7 +42,7 @@
                 <section class="kids">
                     <section class="card large">
                         <div class="card-container large">
-                            <img src="./assets/DALL-E-2024-11-23-09.13.03.webp" alt="Two children at a museum, exploring exhibits with curiosity and joy. One child, a girl with curly brown hair, is pointing at a dinosaur skeleton">
+                            <img src="./assets/billetto-editorial-334686.jpg" alt="">
                         </div>
                         <h3>Are you a young person looking to learn more about science? </h3>
                         <p>Come on down to our museum, there's plenty to see and do.</p>
