--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
                 <h2>Explore</h2>
                 <section class="explore-card">
                     <div class="explore-card-container">
-                        <img src="./assets/DALL-E-2024-11-23-09.08.33.webp" alt="wo children at a museum, exploring exhibits with curiosity and joy. One child is pointing at a dinosaur skeleton while the other looks amazed.">
+                        <img src="./assets/learn-2405206_1920.jpg" alt="">
                     </div>
                     <a href="explore.html" class="cta-button">Kids</a>
                 </section>
                 <section class="explore-card">
                     <div class="explore-card-container">
-                        <img src="./assets/DALL-E-2024-11-23-09.14.09.webp" alt="A museum scene featuring a teacher guiding a group of children on a field trip. The teacher, an enthusiastic adult, is explaining an exhibit">
+                        <img src="./assets/lab-512503_1920.jpg" alt="">
                     </div>
                     <a href="explore.html" class="cta-button">Teachers</a>
                 </section>
