Updated alignment on homepage

--- a/index.html
+++ b/index.html
@@ -48,22 +48,18 @@
 
             <section class="slogan">
                 <h2>Discover Hands-On Fun and Science Together!</h2>
-                <!--<h3>Bring your kids to the community science museum, where curiosity comes alive, hands-on fun awaits, and the wonders of science are yours to explore together! </h3>
-                <div class="card welcome">
-                    <img src="./assets/DALL-E-2024-12-05-11.25.12.webp" alt="A happy family of four (mom, dad, son, and daughter) exploring a science museum together, smiling and engaged with interactive exhibits.">
-                </div>-->
             </section>
 
             <section class="horizontal">
-                <div>
+                <div class="horizontal-text">
                     <h2>Hands on learning</h2>
                     <p>Interactive exhibits allow visitors to engage directly with science concepts, making learning fun and memorable.</p>
                 </div>
-                <div>
+                <div class="horizontal-text">
                     <h2>Family Bonding</h2>
                     <p>The museum offers a shared experience for families to explore together, promoting teamwork and communication while discovering new things.</p>
                 </div>
-                <div>
+                <div class="horizontal-text">
                     <h2>Inspiration and curiosity</h2>
                     <p>Thought-provoking displays and exciting demonstrations spark curiosity, encouraging visitors to ask questions and explore science beyond the museum walls.</p>
                 </div>
