--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </section>
             </div>
 
-            <section>
+            <section class="explore">
                 <h2>Explore</h2>
                 <section class="explore-card">
                     <div class="explore-card-container">
