--- a/tickets.html
+++ b/tickets.html
@@ -84,7 +84,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <a href="cart.html" class="cta-button">Buy tickets</a>
+                <a href="cart.html" class="cta-button">Add to cart</a>
             </section>
             <Section>
                 <h2>Book special events</h2>
@@ -139,7 +139,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <a href="cart.html" class="cta-button">Buy tickets</a>
+                        <a href="cart.html" class="cta-button">Add to cart</a>
                     </section>
                     <section class="card">
                         <div class="card-container">
@@ -191,7 +191,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <a href="cart.html" class="cta-button">Buy tickets</a>
+                        <a href="cart.html" class="cta-button">Add to cart</a>
                     </section>
                     <section class="card">
                         <div class="card-container">
@@ -243,7 +243,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <a href="cart.html" class="cta-button">Buy tickets</a>
+                        <a href="cart.html" class="cta-button">Add to cart</a>
                     </section>
                 </div>
             </Section>
