--- a/visit.html
+++ b/visit.html
@@ -55,7 +55,7 @@
                     </section>
                     <section class="info">
                         <h2>Admission</h2>
-                        <p>The entrance is free for all.</p>
+                        <p>The entrance is <strong>free</strong> for all.</p>
                     </section>
                 </div>
            </section>
