--- a/cart.html
+++ b/cart.html
@@ -29,7 +29,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="explore.html">Explore</a>
-                <a href="exhibitions.html">Exhibition</a>
+                <a href="exhibitions.html">Exhibitions</a>
                 <a href="events.html">Events</a>                
                 <a href="tickets.html">Tickets</a>
                 <a href="cart.html">Cart</a>
