Clean up in html and css

--- a/check-out-success.html
+++ b/check-out-success.html
@@ -16,7 +16,6 @@
         <!--Icons-->
         <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
     </head>
-
     <body>
         <header>
             <a href="index.html" class="header-logo">
@@ -35,20 +34,20 @@
                 <a href="cart.html">Cart</a>
             </nav>
         </header>
-       
         <main> 
             <h1>Checkout success</h1>
             <h2>Order number: #12345</h2>
             <h2>Thank you for your order!</h2>
+            <div class="check-out__container">
+                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
+            </div>
             <a href="order-summary.html" class="cta-button">Order summary</a>
         </main>
-       
         <footer>
             <a href="about.html">About</a>
             <a href="contact-us.html">Send us a message</a>
             <a href="get-involved.html">Get involved</a>
             <a href="visit.html">Visit</a>
         </footer>
-
     </body>
 </html>
