--- a/contact-us.html
+++ b/contact-us.html
@@ -16,7 +16,6 @@
         <!--Icons-->
         <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
     </head>
-
     <body>
         <header>
             <a href="index.html" class="header-logo">
@@ -35,15 +34,14 @@
                 <a href="cart.html">Cart</a>
             </nav>
         </header>
-       
         <main> 
             <h1>Contact us</h1>
             <section class="contact-us">
                 <h2>We're here to help!</h2>
                 <p>Got questions, need support, or want to share feedback? Reach out to us anytime—we'd love to hear from you!</p>
-                <p>Email:</p>
-                <p>Facebook:</p>
-                <p>Instagram:</p>
+                <p>Email: community.science.museum@museum.com</p>
+                <p>Facebook: <a href="www.facebook.com">Facebook</a></p>
+                <p>Instagram:<a href="www.instagram.com">Instagram</a></p>
                 <h3>Let's connect!</h3>
             </section>
             <form class="form">
@@ -59,13 +57,11 @@
             </form>
             <button class="cta-button">Send message</button>
         </main>
-       
         <footer>
             <a href="about.html">About</a>
             <a href="contact-us.html">Send us a message</a>
             <a href="get-involved.html">Get involved</a>
             <a href="visit.html">Visit</a>
         </footer>
-
     </body>
 </html>
