--- a/explore.html
+++ b/explore.html
@@ -16,7 +16,6 @@
         <!--Icons-->
         <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
     </head>
-
     <body>
         <header>
             <a href="index.html" class="header-logo">
@@ -35,13 +34,12 @@
                 <a href="cart.html">Cart</a>
             </nav>
         </header>
-       
         <main> 
             <h1>Explore together</h1>
             <h2>Kids</h2>
                 <section class="kids">
                     <section class="card large">
-                        <div class="card-container large">
+                        <div class="card-image-container large">
                             <img src="./assets/billetto-editorial-334686.jpg" alt="">
                         </div>
                         <h3>Are you a young person looking to learn more about science? </h3>
@@ -73,7 +71,7 @@
            <section>
                 <h2>Researchers</h2>
                 <section class="card researchers">
-                    <div class="card-container large">
+                    <div class="card-image-container large">
                         <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
                     </div>
                     <div class="card-vertical">
