--- a/tickets.html
+++ b/tickets.html
@@ -16,7 +16,6 @@
         <!--Icons-->
         <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
     </head>
-
     <body>
         <header>
             <a href="index.html" class="header-logo">
@@ -35,7 +34,6 @@
                 <a href="cart.html">Cart</a>
             </nav>
         </header>
-       
         <main> 
             <h1>Tickets</h1>
             <section class="guided-tours">
@@ -90,7 +88,7 @@
                 <h2>Book special events</h2>
                 <div class="flex">
                     <section class="card">
-                        <div class="card-container">
+                        <div class="card-image-container">
                             <img src="./assets/roberto-nickson-396152.jpg" alt="Image of a mammut in a museum">
                         </div>
                         <h3>Night in the museum</h3>
@@ -142,7 +140,7 @@
                         <a href="cart.html" class="cta-button">Add to cart</a>
                     </section>
                     <section class="card">
-                        <div class="card-container">
+                        <div class="card-image-container">
                             <img src="./assets/celso-405219.jpg" alt="Image of the moon">
                         </div>
                         <h3>Professor of aeronautics</h3>
@@ -194,7 +192,7 @@
                         <a href="cart.html" class="cta-button">Add to cart</a>
                     </section>
                     <section class="card">
-                        <div class="card-container">
+                        <div class="card-image-container">
                             <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
                         </div>
                         <h3>Energetica Exhibition on Loan</h3>
