--- a/about.html
+++ b/about.html
@@ -16,7 +16,6 @@
         <!--Icons-->
         <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
     </head>
-
     <body>
         <header>
             <a href="index.html" class="header-logo">
@@ -35,12 +34,11 @@
                 <a href="cart.html">Cart</a>
             </nav>
         </header>
-       
         <main> 
            <h1>About us</h1>
            <section class="about__text">
                 <h2>Come join us at the Community Science Museum where we're committed to making science accessible to all.</h2>
-                <div class="card-container__about">
+                <div class="about__card-container">
                     <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
                 </div>
                 <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself.</p>
@@ -48,13 +46,11 @@
                 <p>We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have over 1000 different exhibits on the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the dinosaur exhibits - they only come to life at night when everyone's gone home).</p>
            </section>
         </main>
-       
         <footer>
             <a href="about.html">About</a>
             <a href="contact-us.html">Send us a message</a>
             <a href="get-involved.html">Get involved</a>
             <a href="visit.html">Visit</a>
         </footer>
-
     </body>
 </html>
