--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <!--Icons-->
         <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
     </head>
-
     <body>
         <header>
             <a href="index.html" class="header-logo">
@@ -35,7 +34,6 @@
                 <a href="cart.html">Cart</a>
             </nav>
         </header>
-       
         <main> 
             <section class="container-header">
                 <h1>
@@ -45,11 +43,9 @@
                 </h1>  
             </section>
             <a href="visit.html" class="cta-button__header">Visit us</a>
-
             <section class="slogan">
                 <h2>Discover Hands-On Fun and Science Together!</h2>
             </section>
-
             <section class="horizontal">
                 <div class="horizontal-text">
                     <h2>Hands on learning</h2>
@@ -68,21 +64,21 @@
             <h2>Special events</h2>
             <div class="scroll-container">
                 <section class="card">
-                    <div class="card-container">
+                    <div class="card-image-container">
                         <img src="./assets/roberto-nickson-396152.jpg" alt="Image of a mammut in a museum">
                     </div>
                     <h3>Night at the museum</h3>
                     <a href="events.html" class="cta-button">Go to events</a>
                 </section>
                 <section class="card">
-                    <div class="card-container">
+                    <div class="card-image-container">
                         <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
                     </div>
                     <h3>Energetica exhibitions</h3>
                     <a href="events.html" class="cta-button">Go to events</a>
                 </section>
                 <section class="card">
-                    <div class="card-container">
+                    <div class="card-image-container">
                         <img src="./assets/celso-405219.jpg" alt="Image of the moon">
                     </div>
                     <h3>Professor of Aeronautics</h3>
@@ -93,19 +89,19 @@
             <section class="explore">
                 <h2>Explore</h2>
                 <section class="explore-card">
-                    <div class="explore-card-container">
+                    <div class="explore-card-image-container">
                         <img src="./assets/learn-2405206_1920.jpg" alt="">
                     </div>
                     <a href="explore.html" class="cta-button">Kids</a>
                 </section>
                 <section class="explore-card">
-                    <div class="explore-card-container">
+                    <div class="explore-card-image-container">
                         <img src="./assets/lab-512503_1920.jpg" alt="">
                     </div>
                     <a href="explore.html" class="cta-button">Teachers</a>
                 </section>
                 <section class="explore-card">
-                    <div class="explore-card-container">
+                    <div class="explore-card-image-container">
                         <img src="./assets/mavis-cw-164128.jpg" alt="Image of a museum hall with study desks">
                     </div>
                     <a href="explore.html" class="cta-button">Researchers</a>
@@ -115,42 +111,41 @@
             <h2>Exhibitions</h2>
             <div class="scroll-container">
                 <section class="card">
-                    <div class="card-container">
+                    <div class="card-image-container">
                         <img src="./assets/toa-heftiba-412579.jpg" alt="Image of a dinosaur skeleton in a big museum hall">
                     </div>
                     <h3>Evolution</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
                 <section class="card">
-                    <div class="card-container">
+                    <div class="card-image-container">
                         <img src="./assets/andrew-ruiz-348421.jpg" alt="Image of an astronaut in a spaceship">
                     </div>
                     <h3>Cosmology</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
                 <section class="card">
-                    <div class="card-container">
+                    <div class="card-image-container">
                         <img src="./assets/samuel-zeller-113381.jpg" alt="Image of a human anatomy figure">
                     </div>
                     <h3>Biology & Medicine</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
                 <section class="card">
-                    <div class="card-container">
+                    <div class="card-image-container">
                         <img src="./assets/william-bout-264826.jpg" alt="Image of an art exhibition illustrating a network">
                     </div>
                     <h3>Robotics & AI</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
                 <section class="card">
-                    <div class="card-container">
+                    <div class="card-image-container">
                         <img src="./assets/open-science-735787.jpg" alt="Logo of earth with a keyhole and galaxies around.">
                     </div>
                     <h3>Ecology</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
             </div>
-
             <section class="visit">
                 <h2>Visit</h2>
                 <h3>Opening hours</h3>
@@ -174,13 +169,11 @@
                 </div>  
             </section>
         </main>
-       
         <footer>
             <a href="about.html">About</a>
             <a href="contact-us.html">Send us a message</a>
             <a href="get-involved.html">Get involved</a>
             <a href="visit.html">Visit</a>
         </footer>
-
     </body>
 </html>
