updated to divs instead of section after nu validator

--- a/index.html
+++ b/index.html
@@ -88,24 +88,24 @@
 
             <section class="explore">
                 <h2>Explore</h2>
-                <section class="explore-card">
+                <div class="explore-card">
                     <div class="explore-card-image-container">
                         <img src="./assets/learn-2405206_1920.jpg" alt="">
                     </div>
                     <a href="explore.html" class="cta-button">Kids</a>
-                </section>
-                <section class="explore-card">
+                </div>
+                <div class="explore-card">
                     <div class="explore-card-image-container">
                         <img src="./assets/lab-512503_1920.jpg" alt="">
                     </div>
                     <a href="explore.html" class="cta-button">Teachers</a>
-                </section>
-                <section class="explore-card">
+                </div>
+                <div class="explore-card">
                     <div class="explore-card-image-container">
                         <img src="./assets/mavis-cw-164128.jpg" alt="Image of a museum hall with study desks">
                     </div>
                     <a href="explore.html" class="cta-button">Researchers</a>
-                </section>
+                </div>
             </section>
 
             <h2>Exhibitions</h2>
