--- a/events.html
+++ b/events.html
@@ -38,7 +38,7 @@
             <h1>Upcoming events</h1>
             <section class="card upcoming-events">
                 <div class="card-image-container large">
-                    <img src="./assets/roberto-nickson-396152.jpg" alt="Image of a mammut in a museum">
+                    <img src="./assets/roberto-nickson-396152.jpg" alt="A mammut in the middle of a museum">
                 </div>
                 <div class="card-vertical">
                     <h2>Night in the museum</h2>
@@ -54,7 +54,7 @@
                         <h3>Friday</h3>
                         <h4>Visiting Professor of Aeronautics</h4>
                         <div class="card--image-container__small">
-                            <img src="./assets/celso-405219.jpg" alt="Image of the moon">
+                            <img src="./assets/celso-405219.jpg" alt="The moon in different phases.">
                         </div>
                         <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting "space".</p>
                         <a href="tickets.html" class="cta-button">Buy tickets</a>
@@ -63,7 +63,7 @@
                         <h3>Sunday</h3>
                         <h4>Energetica Exhibition on Loan</h4>
                         <div class="card-image-container__small">
-                            <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
+                            <img src="./assets/scientific-2040795_1280.jpg" alt="A scientist looking at a reactor.">
                         </div>
                         <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It's a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to "Wind Island" that shows how turbines are able to use and control wind to create power.</p>
                         <a href="tickets.html" class="cta-button">Buy tickets</a>
